--- a/notebooks/classical_baselines/svm.ipynb
+++ b/notebooks/classical_baselines/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "725b0deb-61eb-49f0-a776-a4038165212b",
    "metadata": {},
    "outputs": [],
@@ -37,89 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c4295fc4-a3d5-4140-aed0-6afd912bc3a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Data loaded successfully from ../../data/processed/mnist_01_pca_4\n",
-      "Training samples: 4000\n",
-      "Test samples: 1000\n",
-      "Classical SVM Results for mnist_01_pca_4\n",
-      "  Accuracy: 0.9970\n",
-      "  F1-Score: 0.9970\n",
-      "  Training time: 0.0102 seconds\n",
-      "  Inference time: 0.0030 seconds\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      0.99      1.00       486\n",
-      "           1       0.99      1.00      1.00       514\n",
-      "\n",
-      "    accuracy                           1.00      1000\n",
-      "   macro avg       1.00      1.00      1.00      1000\n",
-      "weighted avg       1.00      1.00      1.00      1000\n",
-      "\n",
-      "\n",
-      "Data loaded successfully from ../../data/processed/mnist_01_pca_8\n",
-      "Training samples: 4000\n",
-      "Test samples: 1000\n",
-      "Classical SVM Results for mnist_01_pca_8\n",
-      "  Accuracy: 0.9970\n",
-      "  F1-Score: 0.9970\n",
-      "  Training time: 0.0065 seconds\n",
-      "  Inference time: 0.0023 seconds\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      0.99      1.00       486\n",
-      "           1       0.99      1.00      1.00       514\n",
-      "\n",
-      "    accuracy                           1.00      1000\n",
-      "   macro avg       1.00      1.00      1.00      1000\n",
-      "weighted avg       1.00      1.00      1.00      1000\n",
-      "\n",
-      "\n",
-      "Data loaded successfully from ../../data/processed/mnist_38_pca_4\n",
-      "Training samples: 4000\n",
-      "Test samples: 1000\n",
-      "Classical SVM Results for mnist_38_pca_4\n",
-      "  Accuracy: 0.8750\n",
-      "  F1-Score: 0.8749\n",
-      "  Training time: 0.0586 seconds\n",
-      "  Inference time: 0.0225 seconds\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           3       0.89      0.87      0.88       519\n",
-      "           8       0.86      0.88      0.87       481\n",
-      "\n",
-      "    accuracy                           0.88      1000\n",
-      "   macro avg       0.87      0.88      0.87      1000\n",
-      "weighted avg       0.88      0.88      0.88      1000\n",
-      "\n",
-      "\n",
-      "Data loaded successfully from ../../data/processed/mnist_38_pca_8\n",
-      "Training samples: 4000\n",
-      "Test samples: 1000\n",
-      "Classical SVM Results for mnist_38_pca_8\n",
-      "  Accuracy: 0.9570\n",
-      "  F1-Score: 0.9569\n",
-      "  Training time: 0.0259 seconds\n",
-      "  Inference time: 0.0115 seconds\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           3       0.95      0.97      0.96       519\n",
-      "           8       0.96      0.95      0.95       481\n",
-      "\n",
-      "    accuracy                           0.96      1000\n",
-      "   macro avg       0.96      0.96      0.96      1000\n",
-      "weighted avg       0.96      0.96      0.96      1000\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for 5k testing\n",
     "for dataset in datasets:\n",
@@ -176,75 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "eca8f90d-2a82-4f5f-96ed-08188bffee63",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "============================================================\n",
-      "Dataset: mnist_01_pca_4\n",
-      "============================================================\n",
-      "\n",
-      "Training with 500 samples...\n",
-      "  Accuracy: 0.9950\n",
-      "  F1-Score: 0.9950\n",
-      "  Training time: 0.0019s\n",
-      "\n",
-      "Training with 2000 samples...\n",
-      "  Accuracy: 0.9970\n",
-      "  F1-Score: 0.9970\n",
-      "  Training time: 0.0041s\n",
-      "\n",
-      "============================================================\n",
-      "Dataset: mnist_01_pca_8\n",
-      "============================================================\n",
-      "\n",
-      "Training with 500 samples...\n",
-      "  Accuracy: 0.9970\n",
-      "  F1-Score: 0.9970\n",
-      "  Training time: 0.0008s\n",
-      "\n",
-      "Training with 2000 samples...\n",
-      "  Accuracy: 0.9970\n",
-      "  F1-Score: 0.9970\n",
-      "  Training time: 0.0031s\n",
-      "\n",
-      "============================================================\n",
-      "Dataset: mnist_38_pca_4\n",
-      "============================================================\n",
-      "\n",
-      "Training with 500 samples...\n",
-      "  Accuracy: 0.8550\n",
-      "  F1-Score: 0.8546\n",
-      "  Training time: 0.0022s\n",
-      "\n",
-      "Training with 2000 samples...\n",
-      "  Accuracy: 0.8720\n",
-      "  F1-Score: 0.8718\n",
-      "  Training time: 0.0189s\n",
-      "\n",
-      "============================================================\n",
-      "Dataset: mnist_38_pca_8\n",
-      "============================================================\n",
-      "\n",
-      "Training with 500 samples...\n",
-      "  Accuracy: 0.9370\n",
-      "  F1-Score: 0.9368\n",
-      "  Training time: 0.0012s\n",
-      "\n",
-      "Training with 2000 samples...\n",
-      "  Accuracy: 0.9550\n",
-      "  F1-Score: 0.9549\n",
-      "  Training time: 0.0081s\n",
-      "\n",
-      "✓ Results appended and saved to ../../results/classical_svm_baseline_results.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for dataset in datasets:\n",
     "    dataset_path = path + dataset\n",
@@ -307,7 +163,7 @@
     "with open(output_path, 'w') as f:\n",
     "    json.dump(all_results, indent=2, fp=f)\n",
     "\n",
-    "print(f\"\\n✓ Results appended and saved to {output_path}\")"
+    "print(f\"\\n Results appended and saved to {output_path}\")"
    ]
   },
   {
