--- a/notebooks/classical_baselines/svm.ipynb
+++ b/notebooks/classical_baselines/svm.ipynb
@@ -12,96 +12,58 @@
     "import json\n",
     "import os\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import classification_report, accuracy_score, f1_score\n",
     "from datetime import datetime\n",
     "\n",
     "path = \"../../data/processed/\"\n",
     "\n",
-    "datasets = [\"mnist_01_pca_4\" ,\n",
-    "            \"mnist_01_pca_8\" ,\n",
-    "            \"mnist_38_pca_4\" ,\n",
+    "datasets = [\"mnist_01_pca_4\",\n",
+    "            \"mnist_01_pca_8\",\n",
+    "            \"mnist_38_pca_4\",\n",
     "            \"mnist_38_pca_8\"]\n",
     "\n",
-    "all_results = {\n",
-    "    \"experiment_info\": {\n",
-    "        \"model_type\": \"classical_svm_rbf\",\n",
-    "        \"date\": datetime.now().isoformat(),\n",
-    "        \"random_state\": 42,\n",
-    "    },\n",
-    "    \"results\": []\n",
-    "}\n",
+    "# Multiple seeds for timing variation\n",
+    "seeds = [42, 100, 20, 5, 99]\n",
     "\n",
-    "sample_sizes = [500, 2000]"
+    "sample_sizes = [500, 2000, 4000]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4295fc4-a3d5-4140-aed0-6afd912bc3a3",
+   "id": "96ea5c47-fcef-4614-a970-006577d58455",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for 5k testing\n",
-    "for dataset in datasets:\n",
-    "    dataset_path = path + dataset\n",
-    "    \n",
-    "    X_train = np.load(dataset_path + \"/X_train.npy\")\n",
-    "    X_test = np.load(dataset_path + \"/X_test.npy\")\n",
-    "    y_train = np.load(dataset_path + \"/y_train.npy\")\n",
-    "    y_test = np.load(dataset_path + \"/y_test.npy\")\n",
-    "    \n",
-    "    print(f\"\\nData loaded successfully from {dataset_path}\")\n",
-    "    print(f\"Training samples: {X_train.shape[0]}\")\n",
-    "    print(f\"Test samples: {X_test.shape[0]}\")\n",
+    "# Load existing results or create new\n",
+    "results_path = \"../../results/classical_svm_baseline_results.json\"\n",
     "\n",
-    "    # Train\n",
-    "    start_time = time.time()\n",
-    "    svc_classical = SVC(kernel='rbf', random_state=42)\n",
-    "    svc_classical.fit(X_train, y_train)\n",
-    "    training_time = time.time() - start_time\n",
-    "\n",
-    "    # Inference\n",
-    "    start_time = time.time()\n",
-    "    y_pred = svc_classical.predict(X_test)\n",
-    "    inference_time = time.time() - start_time\n",
-    "\n",
-    "    # Metrics\n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    f1 = f1_score(y_test, y_pred, average='macro')\n",
-    "    \n",
-    "    # Store results for this dataset\n",
-    "    result = {\n",
-    "        \"dataset\": dataset,\n",
-    "        \"n_train\": int(X_train.shape[0]),\n",
-    "        \"n_test\": int(X_test.shape[0]),\n",
-    "        \"n_features\": int(X_train.shape[1]),\n",
-    "        \"accuracy\": float(accuracy),\n",
-    "        \"f1_score\": float(f1),\n",
-    "        \"training_time_seconds\": float(training_time),\n",
-    "        \"inference_time_seconds\": float(inference_time)\n",
+    "if os.path.exists(results_path):\n",
+    "    with open(results_path, 'r') as f:\n",
+    "        all_results = json.load(f)\n",
+    "    print(f\"Loaded existing results with {len(all_results['results'])} entries\")\n",
+    "else:\n",
+    "    all_results = {\n",
+    "        \"experiment_info\": {\n",
+    "            \"model_type\": \"classical_svm_rbf\",\n",
+    "            \"date\": datetime.now().isoformat(),\n",
+    "            \"hyperparameter_tuning\": \"GridSearchCV with C=[0.1, 1, 10, 100] and gamma=['scale', 'auto', 0.001, 0.01, 0.1]\",\n",
+    "            \"cv_folds\": 5\n",
+    "        },\n",
+    "        \"results\": []\n",
     "    }\n",
-    "    \n",
-    "    all_results[\"results\"].append(result)\n",
-    "    \n",
-    "    print(f\"Classical SVM Results for {dataset}\")\n",
-    "    print(f\"  Accuracy: {accuracy:.4f}\")\n",
-    "    print(f\"  F1-Score: {f1:.4f}\")\n",
-    "    print(f\"  Training time: {training_time:.4f} seconds\")\n",
-    "    print(f\"  Inference time: {inference_time:.4f} seconds\")\n",
-    "    print(classification_report(y_test, y_pred))\n",
-    "\n",
-    "# Save to JSON\n",
-    "output_path = \"../../results/classical_svm_baseline_results.json\""
+    "    print(\"Created new results file\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eca8f90d-2a82-4f5f-96ed-08188bffee63",
+   "id": "63a1ae33-a953-4fde-b282-793cfdf13c1c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run experiments\n",
     "for dataset in datasets:\n",
     "    dataset_path = path + dataset\n",
     "    \n",
@@ -111,65 +73,119 @@
     "    y_train_full = np.load(dataset_path + \"/y_train.npy\")\n",
     "    y_test = np.load(dataset_path + \"/y_test.npy\")\n",
     "    \n",
-    "    print(f\"\\n{'='*60}\")\n",
+    "    print(f\"\\n{'='*70}\")\n",
     "    print(f\"Dataset: {dataset}\")\n",
-    "    print(f\"{'='*60}\")\n",
+    "    print(f\"Available training samples: {X_train_full.shape[0]}\")\n",
+    "    print(f\"{'='*70}\")\n",
     "    \n",
     "    for n_samples in sample_sizes:\n",
-    "        # Subsample training data\n",
-    "        X_train, _, y_train, _ = train_test_split(\n",
-    "            X_train_full, y_train_full,\n",
-    "            train_size=n_samples,\n",
-    "            random_state=42,\n",
-    "            stratify=y_train_full\n",
-    "        )\n",
+    "        # Skip if already exists\n",
+    "        existing = [r for r in all_results[\"results\"] \n",
+    "                   if r[\"dataset\"] == dataset and r[\"n_train\"] == n_samples]\n",
     "        \n",
-    "        print(f\"\\nTraining with {n_samples} samples...\")\n",
+    "        if existing and len(existing) >= len(seeds):\n",
+    "            print(f\"\\n Skipping {dataset} with {n_samples} samples (already complete)\")\n",
+    "            continue\n",
     "        \n",
-    "        # Train\n",
-    "        start_time = time.time()\n",
-    "        svc_classical = SVC(kernel='rbf', random_state=42)\n",
-    "        svc_classical.fit(X_train, y_train)\n",
-    "        training_time = time.time() - start_time\n",
+    "        # Skip if requesting more than available\n",
+    "        if n_samples > X_train_full.shape[0]:\n",
+    "            print(f\"\\n Skipping {n_samples} samples (only {X_train_full.shape[0]} available)\")\n",
+    "            continue\n",
     "        \n",
-    "        # Inference\n",
-    "        start_time = time.time()\n",
-    "        y_pred = svc_classical.predict(X_test)\n",
-    "        inference_time = time.time() - start_time\n",
+    "        # Use full dataset or subsample\n",
+    "        if n_samples == X_train_full.shape[0]:\n",
+    "            X_train, y_train = X_train_full, y_train_full\n",
+    "            print(f\"\\n{'─'*70}\")\n",
+    "            print(f\"Training with FULL dataset ({n_samples} samples)\")\n",
+    "            print(f\"{'─'*70}\")\n",
+    "        else:\n",
+    "            X_train, _, y_train, _ = train_test_split(\n",
+    "                X_train_full, y_train_full,\n",
+    "                train_size=n_samples,\n",
+    "                random_state=42,  # Fixed for consistency across runs\n",
+    "                stratify=y_train_full\n",
+    "            )\n",
+    "            print(f\"\\n{'─'*70}\")\n",
+    "            print(f\"Training with {n_samples} samples (subsampled)\")\n",
+    "            print(f\"{'─'*70}\")\n",
     "        \n",
-    "        # Metrics\n",
-    "        accuracy = accuracy_score(y_test, y_pred)\n",
-    "        f1 = f1_score(y_test, y_pred, average='macro')\n",
-    "        \n",
-    "        # Store result\n",
-    "        result = {\n",
-    "            \"dataset\": dataset,\n",
-    "            \"n_train\": int(n_samples),\n",
-    "            \"n_test\": int(X_test.shape[0]),\n",
-    "            \"n_features\": int(X_train.shape[1]),\n",
-    "            \"accuracy\": float(accuracy),\n",
-    "            \"f1_score\": float(f1),\n",
-    "            \"training_time_seconds\": float(training_time),\n",
-    "            \"inference_time_seconds\": float(inference_time),\n",
-    "            \"timestamp\": datetime.now().isoformat()\n",
-    "        }\n",
-    "        \n",
-    "        all_results[\"results\"].append(result)\n",
-    "        \n",
-    "        print(f\"  Accuracy: {accuracy:.4f}\")\n",
-    "        print(f\"  F1-Score: {f1:.4f}\")\n",
-    "        print(f\"  Training time: {training_time:.4f}s\")\n",
+    "        # Run with different seeds\n",
+    "        for seed in seeds:\n",
+    "            # Check if this specific experiment exists\n",
+    "            specific_existing = [r for r in all_results[\"results\"] \n",
+    "                                if r[\"dataset\"] == dataset \n",
+    "                                and r[\"n_train\"] == n_samples \n",
+    "                                and r.get(\"seed\") == seed]\n",
+    "            \n",
+    "            if specific_existing:\n",
+    "                print(f\"  Seed {seed}: Already exists, skipping...\")\n",
+    "                continue\n",
+    "            \n",
+    "            # Hyperparameter tuning with GridSearchCV\n",
+    "            param_grid = {\n",
+    "                'C': [0.1, 1, 10, 100],\n",
+    "                'gamma': ['scale', 'auto', 0.001, 0.01, 0.1]\n",
+    "            }\n",
+    "            \n",
+    "            svc_cv = GridSearchCV(\n",
+    "                SVC(kernel='rbf', random_state=seed),\n",
+    "                param_grid,\n",
+    "                cv=5,\n",
+    "                n_jobs=-1,  # Use all CPU cores\n",
+    "                verbose=0\n",
+    "            )\n",
+    "            \n",
+    "            # Train\n",
+    "            start_time = time.time()\n",
+    "            svc_cv.fit(X_train, y_train)\n",
+    "            training_time = time.time() - start_time\n",
+    "            \n",
+    "            # Inference\n",
+    "            start_time = time.time()\n",
+    "            y_pred = svc_cv.predict(X_test)\n",
+    "            inference_time = time.time() - start_time\n",
+    "            \n",
+    "            # Metrics\n",
+    "            accuracy = accuracy_score(y_test, y_pred)\n",
+    "            f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "            \n",
+    "            # Store result\n",
+    "            result = {\n",
+    "                \"dataset\": dataset,\n",
+    "                \"n_train\": int(n_samples),\n",
+    "                \"n_test\": int(X_test.shape[0]),\n",
+    "                \"n_features\": int(X_train.shape[1]),\n",
+    "                \"seed\": int(seed),\n",
+    "                \"best_C\": float(svc_cv.best_params_['C']),\n",
+    "                \"best_gamma\": float(svc_cv.best_params_['gamma']) if isinstance(svc_cv.best_params_['gamma'], (int, float)) else str(svc_cv.best_params_['gamma']),\n",
+    "                \"accuracy\": float(accuracy),\n",
+    "                \"f1_score\": float(f1),\n",
+    "                \"training_time_seconds\": float(training_time),\n",
+    "                \"inference_time_seconds\": float(inference_time),\n",
+    "                \"timestamp\": datetime.now().isoformat()\n",
+    "            }\n",
+    "            \n",
+    "            all_results[\"results\"].append(result)\n",
+    "            \n",
+    "            print(f\"  Seed {seed:3d}: Acc={accuracy:.4f}, F1={f1:.4f}, \"\n",
+    "                  f\"C={svc_cv.best_params_['C']}, γ={svc_cv.best_params_['gamma']}, \"\n",
+    "                  f\"Train={training_time:.2f}s\")\n",
     "\n",
-    "with open(output_path, 'w') as f:\n",
+    "# Save results\n",
+    "os.makedirs(\"../../results\", exist_ok=True)\n",
+    "with open(results_path, 'w') as f:\n",
     "    json.dump(all_results, indent=2, fp=f)\n",
     "\n",
-    "print(f\"\\n Results appended and saved to {output_path}\")"
+    "print(f\"\\n{'='*70}\")\n",
+    "print(f\" Results saved to {results_path}\")\n",
+    "print(f\"Total experiments: {len(all_results['results'])}\")\n",
+    "print(f\"{'='*70}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ea5c47-fcef-4614-a970-006577d58455",
+   "id": "75ba431b-7a98-4f9d-811d-eed75a2004d4",
    "metadata": {},
    "outputs": [],
    "source": []
