--- a/notebooks/data_processing/data_process_01.ipynb
+++ b/notebooks/data_processing/data_process_01.ipynb
@@ -111,13 +111,29 @@
     "    print(f\"✓ Saved visualization to: {folder}/pca_reconstruction.png\")\n",
     "    print(f\"{'='*60}\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97e17747-7319-4516-85dd-0231d0fb577c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4a1e999-6eec-4a2d-b777-c1c1f69a7ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (qml-env)",
+   "display_name": "Python (qml)",
    "language": "python",
-   "name": "qml-env"
+   "name": "qml_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -129,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
