Clear notebook outputs and reset execution counts
Remove executed outputs and set execution_count to null in several Jupyter notebooks to reduce repository noise/size. Cleared stdout/image outputs from notebooks/classical_baselines/{knn,shallow_nn}.ipynb and prototype/{classical_baseline,data,quantum_kernel_baseline}.ipynb. Also updated notebook kernel metadata (display_name/name/version) where present. This cleans up persisted outputs while preserving the notebook source.

--- a/prototype/quantum_kernel_baseline.ipynb
+++ b/prototype/quantum_kernel_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b58c2dde-ecda-4230-a4cc-984d541a13a8",
    "metadata": {},
    "outputs": [],
@@ -14,20 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5a009c38-da01-4a33-88d4-9135101bfee3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data loaded successfully!\n",
-      "Training samples: 400\n",
-      "Test samples: 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -44,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c7189a5a-b8ae-4cb4-b2b1-f0107daddeb2",
    "metadata": {},
    "outputs": [],
@@ -76,21 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1817476a-7c59-4964-9a86-e361a3f72540",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Quantum SVM Results:\n",
-      "  Accuracy: 0.4600\n",
-      "  Training time: 118.3671 seconds\n",
-      "  Inference time: 59.2303 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test\n",
     "start_time = time.time()\n",
@@ -114,9 +93,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (qml-env)",
+   "display_name": "Python (qml)",
    "language": "python",
-   "name": "qml-env"
+   "name": "qml_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -128,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
