--- a/prototype/classical_baseline.ipynb
+++ b/prototype/classical_baseline.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "087d8622-799b-4934-8ca8-84f1d65d9fce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data loaded successfully!\n",
-      "Training samples: 400\n",
-      "Test samples: 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -32,21 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f8cb7be1-1ffd-4b43-aefd-6e3eb2c09362",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classical SVM Results:\n",
-      "  Accuracy: 1.0000\n",
-      "  Training time: 0.0068 seconds\n",
-      "  Inference time: 0.0005 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "from sklearn.svm import SVC\n",
@@ -73,26 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7827f6ad-c466-4a79-bb89-ceb90ff9e395",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00        54\n",
-      "           1       1.00      1.00      1.00        46\n",
-      "\n",
-      "    accuracy                           1.00       100\n",
-      "   macro avg       1.00      1.00      1.00       100\n",
-      "weighted avg       1.00      1.00      1.00       100\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
@@ -111,9 +74,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (qml-env)",
+   "display_name": "Python (qml)",
    "language": "python",
-   "name": "qml-env"
+   "name": "qml_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -125,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
