--- a/notebooks/data_processing/raw_data_loader.ipynb
+++ b/notebooks/data_processing/raw_data_loader.ipynb
@@ -150,9 +150,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (qml)",
+   "display_name": "Python (qml-env)",
    "language": "python",
-   "name": "qml_kernel"
+   "name": "qml-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
