Reorganize notebooks into binary and multiclass
Move existing classical and data-processing notebooks into dedicated binary subfolders and update data paths to ../../data/binary/processed (and raw paths). Add new multiclass notebooks for 4-way KNN, logistic regression and SVM baselines plus multiclass data-processing notebooks and result JSONs.

--- a/notebooks/classical_baselines/binary/log_reg.ipynb
+++ b/notebooks/classical_baselines/binary/log_reg.ipynb
@@ -17,7 +17,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, accuracy_score, f1_score\n",
     "\n",
-    "path = \"../../data/processed/\"\n",
+    "path = \"../../data/binary/processed/\"\n",
     "\n",
     "datasets = [\"mnist_01_pca_4\",\n",
     "            \"mnist_01_pca_8\",\n",
