--- a/notebooks/data_processing/binary/raw_data_loader.ipynb
+++ b/notebooks/data_processing/binary/raw_data_loader.ipynb
@@ -67,7 +67,7 @@
     "    )\n",
     "    \n",
     "    # Save raw\n",
-    "    folder = Path('../../data/raw') / name\n",
+    "    folder = Path('../../data/binary/raw') / name\n",
     "    folder.mkdir(parents=True, exist_ok=True)\n",
     "    \n",
     "    np.save(folder / 'X_raw.npy', X_subset)\n",
@@ -76,7 +76,7 @@
     "    print(f\"Saved {name}: {len(X_subset)} samples\")\n",
     "    print(f\"  Class distribution: {np.bincount(y_subset)}\")\n",
     "\n",
-    "    folder = Path('data/raw') / name\n",
+    "    folder = Path('data/binary/raw') / name\n",
     "    folder.mkdir(parents=True, exist_ok=True)\n",
     "    np.save(folder / 'X_raw.npy', X_subset)\n",
     "    np.save(folder / 'y_raw.npy', y_subset)\n",
