--- a/notebooks/classical_baselines/binary/shallow_nn.ipynb
+++ b/notebooks/classical_baselines/binary/shallow_nn.ipynb
@@ -25,7 +25,7 @@
     "if torch.cuda.is_available():\n",
     "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
     "\n",
-    "path = \"../../data/processed/\"\n",
+    "path = \"../../data/binary/processed/\"\n",
     "\n",
     "datasets = [\"mnist_01_pca_4\",\n",
     "            \"mnist_01_pca_8\",\n",
@@ -356,9 +356,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (qml)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "qml_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -370,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
