--- a/notebooks/classical_baselines/multiclass/4-way_multiclass/knn_4way.ipynb
+++ b/notebooks/classical_baselines/multiclass/4-way_multiclass/knn_4way.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b900696c-5fc8-44a1-a407-bd6155aff100",
+   "id": "a1c3ab55-447f-4450-aa1e-0d69f4d13a71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,28 +16,27 @@
     "from sklearn.metrics import classification_report, accuracy_score, f1_score\n",
     "from datetime import datetime\n",
     "\n",
-    "path = \"../../data/processed/\"\n",
+    "path = \"../../../../data/multiclass/processed/\"\n",
     "\n",
-    "datasets = [\"mnist_01_pca_4\",\n",
-    "            \"mnist_01_pca_8\",\n",
-    "            \"mnist_38_pca_4\",\n",
-    "            \"mnist_38_pca_8\"]\n",
+    "datasets = [\"mnist_multi4_pca_4\",\n",
+    "            \"mnist_multi4_pca_8\",\n",
+    "        ]\n",
     "\n",
     "# Multiple seeds for timing variation\n",
     "seeds = [42, 100, 20, 5, 99]\n",
     "\n",
-    "sample_sizes = [500, 2000, 4000]"
+    "sample_sizes = [100, 250, 400]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38644f37-e48c-47e4-9518-0a9b53e50d7e",
+   "id": "3aaf48c0-f587-4aae-af8f-4bbdaf38b90f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load existing results or create new\n",
-    "results_path = \"../../results/classical_knn_baseline_results.json\"\n",
+    "results_path = \"../../../../results/4-way_multi_classical_knn_baseline_results.json\"\n",
     "\n",
     "if os.path.exists(results_path):\n",
     "    with open(results_path, 'r') as f:\n",
@@ -151,7 +150,6 @@
     "                  f\"k={knn_cv.best_params_['n_neighbors']}, \"\n",
     "                  f\"Train={training_time:.3f}s, Infer={inference_time:.3f}s\")\n",
     "\n",
-    "os.makedirs(\"../../results\", exist_ok=True)\n",
     "with open(results_path, 'w') as f:\n",
     "    json.dump(all_results, indent=2, fp=f)\n",
     "\n",
@@ -164,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "327f217d-263b-43ad-b9a6-107a876d350a",
+   "id": "c4edd948-519c-47d3-985e-fedab3fb1cb4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
