--- a/notebooks/classical_baselines/multiclass/4-way_multiclass/log_reg_4way.ipynb
+++ b/notebooks/classical_baselines/multiclass/4-way_multiclass/log_reg_4way.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725b0deb-61eb-49f0-a776-a4038165212b",
+   "id": "e220712a-2e4f-4256-8e70-449847bcf6a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,33 +11,33 @@
     "import time\n",
     "import json\n",
     "import os\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import classification_report, accuracy_score, f1_score\n",
     "from datetime import datetime\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report, accuracy_score, f1_score\n",
     "\n",
-    "path = \"../../data/processed/\"\n",
+    "path = \"../../../../data/multiclass/processed/\"\n",
     "\n",
-    "datasets = [\"mnist_01_pca_4\",\n",
-    "            \"mnist_01_pca_8\",\n",
-    "            \"mnist_38_pca_4\",\n",
-    "            \"mnist_38_pca_8\"]\n",
+    "datasets = [\"mnist_multi4_pca_4\",\n",
+    "            \"mnist_multi4_pca_8\",\n",
+    "        ]\n",
     "\n",
     "# Multiple seeds for timing variation\n",
     "seeds = [42, 100, 20, 5, 99]\n",
     "\n",
-    "sample_sizes = [500, 2000, 4000]"
+    "sample_sizes = [100, 250, 400]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ea5c47-fcef-4614-a970-006577d58455",
+   "id": "76ace57d-143d-4615-b938-25b44cc42efe",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load existing results or create new\n",
-    "results_path = \"../../results/classical_svm_baseline_results.json\"\n",
+    "results_path = \"../../../../results/4-way_multi_classical_logreg_baseline_results.json\"\n",
     "\n",
     "if os.path.exists(results_path):\n",
     "    with open(results_path, 'r') as f:\n",
@@ -46,20 +46,20 @@
     "else:\n",
     "    all_results = {\n",
     "        \"experiment_info\": {\n",
-    "            \"model_type\": \"classical_svm_rbf\",\n",
+    "            \"model_type\": \"classical_logistic_regression\",\n",
     "            \"date\": datetime.now().isoformat(),\n",
-    "            \"hyperparameter_tuning\": \"GridSearchCV with C=[0.1, 1, 10, 100] and gamma=['scale', 'auto', 0.001, 0.01, 0.1]\",\n",
+    "            \"hyperparameter_tuning\": \"GridSearchCV with C=[0.001, 0.01, 0.1, 1, 10, 100]\",\n",
     "            \"cv_folds\": 5\n",
     "        },\n",
     "        \"results\": []\n",
     "    }\n",
-    "    print(\"Created new results file\")"
+    "    print(\"Created new results file\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63a1ae33-a953-4fde-b282-793cfdf13c1c",
+   "id": "486e08fc-3f22-455f-9c31-2d9db6938af6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
     "            print(f\"Training with {n_samples} samples (subsampled)\")\n",
     "            print(f\"{'─'*70}\")\n",
     "        \n",
-    "        # Run with different seeds\n",
+    "        # Run with different seeds for timing variation\n",
     "        for seed in seeds:\n",
     "            # Check if this specific experiment exists\n",
     "            specific_existing = [r for r in all_results[\"results\"] \n",
@@ -122,27 +122,22 @@
     "                continue\n",
     "            \n",
     "            # Hyperparameter tuning with GridSearchCV\n",
-    "            param_grid = {\n",
-    "                'C': [0.1, 1, 10, 100],\n",
-    "                'gamma': ['scale', 'auto', 0.001, 0.01, 0.1]\n",
-    "            }\n",
-    "            \n",
-    "            svc_cv = GridSearchCV(\n",
-    "                SVC(kernel='rbf', random_state=seed),\n",
-    "                param_grid,\n",
+    "            param_grid = {'C': [0.001, 0.01, 0.1, 1, 10, 100]}\n",
+    "            log_reg_cv = GridSearchCV(\n",
+    "                LogisticRegression(random_state=seed, max_iter=1000), \n",
+    "                param_grid, \n",
     "                cv=5,\n",
-    "                n_jobs=-1,  # Use all CPU cores\n",
-    "                verbose=0\n",
+    "                n_jobs=-1  # Use all CPU cores for faster training\n",
     "            )\n",
     "            \n",
     "            # Train\n",
     "            start_time = time.time()\n",
-    "            svc_cv.fit(X_train, y_train)\n",
+    "            log_reg_cv.fit(X_train, y_train)\n",
     "            training_time = time.time() - start_time\n",
     "            \n",
     "            # Inference\n",
     "            start_time = time.time()\n",
-    "            y_pred = svc_cv.predict(X_test)\n",
+    "            y_pred = log_reg_cv.predict(X_test)\n",
     "            inference_time = time.time() - start_time\n",
     "            \n",
     "            # Metrics\n",
@@ -156,8 +151,7 @@
     "                \"n_test\": int(X_test.shape[0]),\n",
     "                \"n_features\": int(X_train.shape[1]),\n",
     "                \"seed\": int(seed),\n",
-    "                \"best_C\": float(svc_cv.best_params_['C']),\n",
-    "                \"best_gamma\": float(svc_cv.best_params_['gamma']) if isinstance(svc_cv.best_params_['gamma'], (int, float)) else str(svc_cv.best_params_['gamma']),\n",
+    "                \"best_C\": float(log_reg_cv.best_params_['C']),\n",
     "                \"accuracy\": float(accuracy),\n",
     "                \"f1_score\": float(f1),\n",
     "                \"training_time_seconds\": float(training_time),\n",
@@ -168,8 +162,8 @@
     "            all_results[\"results\"].append(result)\n",
     "            \n",
     "            print(f\"  Seed {seed:3d}: Acc={accuracy:.4f}, F1={f1:.4f}, \"\n",
-    "                  f\"C={svc_cv.best_params_['C']}, γ={svc_cv.best_params_['gamma']}, \"\n",
-    "                  f\"Train={training_time:.2f}s\")\n",
+    "                  f\"Best C={log_reg_cv.best_params_['C']:.3f}, \"\n",
+    "                  f\"Train={training_time:.3f}s\")\n",
     "\n",
     "# Save results\n",
     "os.makedirs(\"../../results\", exist_ok=True)\n",
@@ -177,7 +171,7 @@
     "    json.dump(all_results, indent=2, fp=f)\n",
     "\n",
     "print(f\"\\n{'='*70}\")\n",
-    "print(f\" Results saved to {results_path}\")\n",
+    "print(f\"Results saved to {results_path}\")\n",
     "print(f\"Total experiments: {len(all_results['results'])}\")\n",
     "print(f\"{'='*70}\")"
    ]
@@ -185,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75ba431b-7a98-4f9d-811d-eed75a2004d4",
+   "id": "b079c444-9235-4725-9b1b-f31fd3c1fe57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -193,9 +187,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (qml-env)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "qml-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -207,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
