--- a/notebooks/data_processing/binary/data_process_38.ipynb
+++ b/notebooks/data_processing/binary/data_process_38.ipynb
@@ -2,35 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5349ff3f-c707-4c38-b40d-e7d08ed26a89",
+   "execution_count": 1,
+   "id": "035cd8e8-ba55-491c-8966-3b9a6a3ae3b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "X = np.load(\"../../data/raw/digits_0v1/X_raw.npy\")\n",
-    "y = np.load(\"../../data/raw/digits_0v1/y_raw.npy\")"
+    "X = np.load(\"../../data/binary/raw/digits_3v8/X_raw.npy\")\n",
+    "y = np.load(\"../../data/binary/raw/digits_3v8/y_raw.npy\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "270ce01b-732b-4db3-a1cd-973b2f346284",
+   "id": "9ba3958b-e291-4059-a13a-c2cfaafb23a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca_features = [(4 , \"mnist_01_pca_4\") ,\n",
-    "                ( 8 , \"mnist_01_pca_8\")]"
+    "pca_features = [(4 , \"mnist_38_pca_4\") ,\n",
+    "                ( 8 , \"mnist_38_pca_8\")]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09ccaa72-c52a-4702-86e5-96b3c969676e",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "ac180a11-de87-4075-a63a-0fcedafcb112",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -109,21 +107,13 @@
     "    plt.show()\n",
     "    \n",
     "    print(f\"✓ Saved visualization to: {folder}/pca_reconstruction.png\")\n",
-    "    print(f\"{'='*60}\\n\")\n"
+    "    print(f\"{'='*60}\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97e17747-7319-4516-85dd-0231d0fb577c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4a1e999-6eec-4a2d-b777-c1c1f69a7ea2",
+   "id": "1c7d327d-d654-4594-ab90-44fdfff8f39f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -131,9 +121,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (qml)",
+   "display_name": "Python (qml-env)",
    "language": "python",
-   "name": "qml_kernel"
+   "name": "qml-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -145,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
