Add 4-way shallow NN notebook and results
Add a new multiclass notebook implementing a shallow neural network baseline (notebooks/classical_baselines/multiclass/4-way_multiclass/shallow_nn_4way.ipynb) with grid search, training/evaluation loops, and result serialization. Save experiment outputs to results/4-wayclassical_nn_baseline_results.json.  Also modify requirements.txt (dependency changes).

--- a/notebooks/classical_baselines/multiclass/4-way_multiclass/shallow_nn_4way.ipynb
+++ b/notebooks/classical_baselines/multiclass/4-way_multiclass/shallow_nn_4way.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bb2d21cc-550b-4b90-a423-88511755c96c",
+   "execution_count": 1,
+   "id": "90f8fd66-19fd-4707-91a0-a039d9db70c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n",
+      "GPU: NVIDIA GeForce RTX 3060\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -23,29 +32,38 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f\"Using device: {device}\")\n",
     "if torch.cuda.is_available():\n",
-    "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
-    "\n",
-    "path = \"../../data/binary/processed/\"\n",
-    "\n",
-    "datasets = [\"mnist_01_pca_4\",\n",
-    "            \"mnist_01_pca_8\",\n",
-    "            \"mnist_38_pca_4\",\n",
-    "            \"mnist_38_pca_8\"]\n",
-    "\n",
-    "seeds = [42, 100, 20, 5, 99]\n",
-    "sample_sizes = [500, 2000, 4000]"
+    "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61d99dfc-c11f-4014-9ac6-3be6c8dcf331",
+   "execution_count": 2,
+   "id": "4f196ce8-f46c-43f8-bb41-44045625b73f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"../../../../data/multiclass/processed/\"\n",
+    "\n",
+    "datasets = [\"mnist_multi4_pca_4\",\n",
+    "            \"mnist_multi4_pca_8\",\n",
+    "        ]\n",
+    "\n",
+    "# Multiple seeds for timing variation\n",
+    "seeds = [42, 100, 20, 5, 99]\n",
+    "\n",
+    "sample_sizes = [100, 250, 400]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "711926ac-f4c3-4cb7-b8f6-e9a15eb44ec9",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ShallowNN(nn.Module):\n",
     "    \n",
-    "    def __init__(self, input_dim, hidden_dim, output_dim=2):\n",
+    "    def __init__(self, input_dim, hidden_dim, output_dim=4):\n",
     "        super(ShallowNN, self).__init__()\n",
     "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
     "        self.relu = nn.ReLU()\n",
@@ -92,20 +110,13 @@
     "\n",
     "\n",
     "def remap_labels(y):\n",
-    "    \"\"\"\n",
-    "    Remap labels to [0, 1] for binary classification.\n",
-    "    This is necessary for PyTorch CrossEntropyLoss.\n",
     "    \n",
-    "    For example:\n",
-    "    - [0, 1] -> [0, 1] (no change)\n",
-    "    - [3, 8] -> [0, 1]\n",
-    "    \"\"\"\n",
     "    unique_labels = np.unique(y)\n",
-    "    if len(unique_labels) != 2:\n",
-    "        raise ValueError(f\"Expected 2 unique labels, got {len(unique_labels)}: {unique_labels}\")\n",
+    "    if len(unique_labels) != 4:\n",
+    "        raise ValueError(f\"Expected 4 unique labels, got {len(unique_labels)}: {unique_labels}\")\n",
     "    \n",
     "    # Create mapping: first unique label -> 0, second -> 1\n",
-    "    label_map = {unique_labels[0]: 0, unique_labels[1]: 1}\n",
+    "    label_map = {unique_labels[0]: 0, unique_labels[1]: 1, unique_labels[2]: 2, unique_labels[3]: 3}\n",
     "    return np.array([label_map[label] for label in y])\n",
     "\n",
     "\n",
@@ -118,13 +129,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "33134bb8-7736-4d57-a9a1-345d701f9955",
+   "execution_count": 4,
+   "id": "467b23d9-9ac5-4b79-80b3-cf45d19f8059",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created new results file\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset: mnist_multi4_pca_4\n",
+      "Available training samples: 400\n",
+      "Input dimension: 4\n",
+      "Unique labels in training: [0 1 2 3]\n",
+      "Unique labels in test: [0 1 2 3]\n",
+      "======================================================================\n",
+      "\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "Training with 100 samples (subsampled)\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "  Seed  42: Best params - hidden=8, lr=0.01, batch=64, epochs=100, params=76\n",
+      "            Test - Acc=0.8800, F1=0.8790, Train=0.27s\n",
+      "  Seed 100: Best params - hidden=16, lr=0.01, batch=32, epochs=50, params=148\n",
+      "            Test - Acc=0.8800, F1=0.8813, Train=0.26s\n",
+      "  Seed  20: Best params - hidden=8, lr=0.001, batch=32, epochs=50, params=76\n",
+      "            Test - Acc=0.8100, F1=0.8073, Train=0.26s\n",
+      "  Seed   5: Best params - hidden=8, lr=0.01, batch=32, epochs=100, params=76\n",
+      "            Test - Acc=0.9100, F1=0.9085, Train=0.51s\n",
+      "  Seed  99: Best params - hidden=8, lr=0.01, batch=32, epochs=50, params=76\n",
+      "            Test - Acc=0.8800, F1=0.8802, Train=0.29s\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "Training with 250 samples (subsampled)\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "  Seed  42: Best params - hidden=8, lr=0.01, batch=32, epochs=100, params=76\n",
+      "            Test - Acc=0.9100, F1=0.9114, Train=0.99s\n",
+      "  Seed 100: Best params - hidden=8, lr=0.01, batch=32, epochs=50, params=76\n",
+      "            Test - Acc=0.9300, F1=0.9289, Train=0.53s\n",
+      "  Seed  20: Best params - hidden=8, lr=0.1, batch=32, epochs=100, params=76\n",
+      "            Test - Acc=0.9300, F1=0.9298, Train=0.98s\n",
+      "  Seed   5: Best params - hidden=8, lr=0.01, batch=32, epochs=50, params=76\n",
+      "            Test - Acc=0.9300, F1=0.9284, Train=0.51s\n",
+      "  Seed  99: Best params - hidden=8, lr=0.001, batch=32, epochs=50, params=76\n",
+      "            Test - Acc=0.9000, F1=0.8997, Train=0.52s\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "Training with FULL dataset (400 samples)\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "  Seed  42: Best params - hidden=8, lr=0.01, batch=32, epochs=100, params=76\n",
+      "            Test - Acc=0.9100, F1=0.9086, Train=1.59s\n",
+      "  Seed 100: Best params - hidden=8, lr=0.1, batch=64, epochs=50, params=76\n",
+      "            Test - Acc=0.9300, F1=0.9307, Train=0.51s\n",
+      "  Seed  20: Best params - hidden=16, lr=0.01, batch=64, epochs=50, params=148\n",
+      "            Test - Acc=0.9300, F1=0.9291, Train=0.49s\n",
+      "  Seed   5: Best params - hidden=8, lr=0.001, batch=32, epochs=100, params=76\n",
+      "            Test - Acc=0.9200, F1=0.9206, Train=1.61s\n",
+      "  Seed  99: Best params - hidden=8, lr=0.1, batch=64, epochs=50, params=76\n",
+      "            Test - Acc=0.9000, F1=0.8962, Train=0.49s\n",
+      "\n",
+      "======================================================================\n",
+      "Dataset: mnist_multi4_pca_8\n",
+      "Available training samples: 400\n",
+      "Input dimension: 8\n",
+      "Unique labels in training: [0 1 2 3]\n",
+      "Unique labels in test: [0 1 2 3]\n",
+      "======================================================================\n",
+      "\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "Training with 100 samples (subsampled)\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "  Seed  42: Best params - hidden=8, lr=0.01, batch=32, epochs=50, params=108\n",
+      "            Test - Acc=0.9100, F1=0.9103, Train=0.27s\n",
+      "  Seed 100: Best params - hidden=8, lr=0.1, batch=32, epochs=100, params=108\n",
+      "            Test - Acc=0.8900, F1=0.8914, Train=0.51s\n",
+      "  Seed  20: Best params - hidden=8, lr=0.01, batch=64, epochs=50, params=108\n",
+      "            Test - Acc=0.9400, F1=0.9394, Train=0.13s\n",
+      "  Seed   5: Best params - hidden=8, lr=0.01, batch=32, epochs=50, params=108\n",
+      "            Test - Acc=0.8800, F1=0.8792, Train=0.26s\n",
+      "  Seed  99: Best params - hidden=8, lr=0.01, batch=32, epochs=50, params=108\n",
+      "            Test - Acc=0.9100, F1=0.9112, Train=0.26s\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "Training with 250 samples (subsampled)\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "  Seed  42: Best params - hidden=8, lr=0.01, batch=64, epochs=100, params=108\n",
+      "            Test - Acc=0.9300, F1=0.9310, Train=0.56s\n",
+      "  Seed 100: Best params - hidden=8, lr=0.01, batch=32, epochs=100, params=108\n",
+      "            Test - Acc=0.9300, F1=0.9293, Train=0.99s\n",
+      "  Seed  20: Best params - hidden=8, lr=0.01, batch=64, epochs=100, params=108\n",
+      "            Test - Acc=0.9600, F1=0.9597, Train=0.56s\n",
+      "  Seed   5: Best params - hidden=8, lr=0.001, batch=32, epochs=50, params=108\n",
+      "            Test - Acc=0.9000, F1=0.8992, Train=0.50s\n",
+      "  Seed  99: Best params - hidden=8, lr=0.01, batch=32, epochs=100, params=108\n",
+      "            Test - Acc=0.9200, F1=0.9204, Train=1.00s\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "Training with FULL dataset (400 samples)\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "  Seed  42: Best params - hidden=8, lr=0.001, batch=64, epochs=100, params=108\n",
+      "            Test - Acc=0.9200, F1=0.9210, Train=0.95s\n",
+      "  Seed 100: Best params - hidden=8, lr=0.01, batch=32, epochs=50, params=108\n",
+      "            Test - Acc=0.9500, F1=0.9503, Train=0.80s\n",
+      "  Seed  20: Best params - hidden=8, lr=0.01, batch=32, epochs=50, params=108\n",
+      "            Test - Acc=0.9600, F1=0.9609, Train=0.82s\n",
+      "  Seed   5: Best params - hidden=8, lr=0.01, batch=64, epochs=50, params=108\n",
+      "            Test - Acc=0.9400, F1=0.9401, Train=0.47s\n",
+      "  Seed  99: Best params - hidden=8, lr=0.001, batch=32, epochs=50, params=108\n",
+      "            Test - Acc=0.9400, F1=0.9406, Train=0.82s\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize results storage\n",
-    "results_path = \"../../results/classical_nn_baseline_results.json\"\n",
+    "results_path = \"../../../../results/classical_nn_4way_baseline_results.json\"\n",
     "if os.path.exists(results_path):\n",
     "    with open(results_path, 'r') as f:\n",
     "        all_results = json.load(f)\n",
@@ -329,10 +444,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2055ad45-f243-4a6a-bcc2-545892d83379",
+   "execution_count": 6,
+   "id": "91541267-cba3-4587-bdab-8e0dcb18de4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "Results saved to ../../../../results/classical_nn_4way_baseline_results.json\n",
+      "Total experiments: 30\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# Save results\n",
     "os.makedirs(\"../../results\", exist_ok=True)\n",
@@ -348,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d8c4fe1-662e-48aa-a3d7-401b48be8308",
+   "id": "8137fbaf-e2bd-49da-98c3-5356df602da2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -356,9 +483,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (qml)",
    "language": "python",
-   "name": "python3"
+   "name": "qml_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -370,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
