--- a/notebooks/data_processing/multiclass/raw_data_loader_multi4-8.ipynb
+++ b/notebooks/data_processing/multiclass/raw_data_loader_multi4-8.ipynb
@@ -317,9 +317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (qml-env)",
+   "display_name": "Python (qml)",
    "language": "python",
-   "name": "qml-env"
+   "name": "qml_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
